# MsgSync-dev

./: .eslintignore  .eslintrc.json  .gitignore  .prettierrc  CAMPAIGN_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
aggregator/: .env.example  Dockerfile  README.md  package.json
aggregator/prisma/: schema.prisma
aggregator/src/: index.js
aggregator/tests/: api.test.js  normalization.test.js
apps/design-system/: README.md
apps/dev-studio/: README.md
apps/docs/: README.md
apps/www/: .env.example  README.md  package.json
docs/: README.md  aggregator-guide.md  architecture.md  bundle-management.md  campaign-management.md  deployment-guide.md  development-plan.md  getting-started.md  go-sdk.md  js-sdk.md  multi-protocol-support.md  nextjs-website-plan.md  number-verification.md  php-sdk.md  platform-api.md  production-deployment.md  python-sdk.md  reseller-management.md  routing-failover.md  sdk-reference.md  security-anti-fraud.md  troubleshooting.md
e2e/docs/: README.md  package.json  tsconfig.json
examples/: README.md
platform/: Dockerfile  README.md  package.json  seed-clients.js  setup-campaigns.sh
scripts/: bootstrap-env.js  check-local-stack.js
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/msgsync/: __init__.py  client.py  exceptions.py
(+126 files in other folders)
