[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msgsync-sdk"
version = "1.0.0"
description = "MsgSync Python SDK"
readme = "README.md"
authors = [{ name = "MsgSync Team", email = "support@msgsync.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/MsgSync/MsgSync"
Issues = "https://github.com/MsgSync/MsgSync/issues"
